2005/02/16 23:30 (-0400) muppetman

	* pm/SimpleList.pm: Catch undef iters gotten from requests for
	non-existent entries.

	* gtk2perl.h, xs/GtkPlug.xs, xs/GtkSocket.xs: invert the sense of
	the tests around GtkPlug and GtkSocket; only include them on X11,
	since that's the only platform on which they are supported.

2005/02/10 22:30 (+0100) kaffeetisch

	* t/GtkBox.t, t/GtkNotebook.t: Use TRUE and FALSE instead of 1 and
	0 or undef where appropriate.

2005/02/08 01:15 (-0400) muppetman

	* Gtk2.pm, NEWS, README, copyright.pod: unstable release 1.073

	* Makefile.PL: require Glib 1.073

	* MANIFEST: updated

2005/02/08 01:05 (-0400) muppetman

	* t/GtkComboBox.t: Fix gtk+ assertions by setting the combobox up
	properly.

2005/02/08 00:15 (-0400) muppetman

	* xs/GdkPixbuf.xs, t/GdkPixbuf.t: bind and test gdk_pixbuf_get_option

	* t/GtkAboutDialog.t, xs/GtkAboutDialog.xs: implement and test
	gtk_show_about_dialog

	* xs/GtkCellRenderer.xs, t/GtkCellRenderer.t: bind and test
	gtk_cell_renderer_stop_editing

	* xs/GtkIconView.xs, t/GtkIconView.t: bind and test
	gtk_icon_view_selected_foreach

2005/02/08 00:10 (-0400) muppetman

	* t/GtkComboBox.t: fix skip count.

2005/02/08 00:05 (-0400) muppetman

	M MANIFEST
	M xs_files-2.0
	A t/PangoAttributes.t
	A xs/PangoAttributes.xs: Bind and test pango_parse_markup().

2005/01/29 21:10 (-0400) muppetman

	* xs/GtkIconView.xs: remove out-of-date commentary

	* t/GdkEvent.t, t/GtkAccelGroup.t, t/GtkButton.t, t/GtkCellView.t,
	t/GtkComboBox.t, t/GtkEntry.t, t/GtkEntryCompletion.t,
	t/GtkFileChooser.t, t/GtkFileFilter.t, t/GtkIconTheme.t,
	t/GtkIconView.t, t/GtkImage.t, t/GtkTreeView.t, xs/GdkEvent.xs,
	xs/GtkAccelGroup.xs, xs/GtkButton.xs, xs/GtkComboBox.xs,
	xs/GtkEntry.xs, xs/GtkEntryCompletion.xs, xs/GtkFileChooser.xs,
	xs/GtkFileFilter.xs, xs/GtkIconTheme.xs, xs/GtkImage.xs,
	xs/GtkTreeView.xs: fix version tests to use stable 2.6.0

2005/01/29 01:40 (-0400) muppetman
